--- a/index.html
+++ b/index.html
@@ -21,28 +21,27 @@
             <span></span>
         </div>
 
-        <div class="btn-links">
-            <ul>
-                <li> <a href="#">Inscrever-se no NLW</a></li>
-                <li> <a href="#">Baixar meu E-Book</a></li>
-                <li> <a href="#">Ver meu portifólio</a></li>
-                <li> <a href="#">Conheça o Explorer</a></li>
-                <li> <a href="#">Inscrever-se no NLW</a></li>
-                <li> <a href="#">Inscrever-se no NLW</a></li>
-            </ul>
-        </div>
+
+        <ul id="links">
+            <li> <a href="https://rocketforms.typeform.com/to/fPcSmBp9#referral_id=908d1aa8-dd6f-4b35-be46-39ab192e74db"
+                    target="_blank">Inscrever-se no NLW</a></li>
+            <li> <a href="#">Baixar meu E-Book</a></li>
+            <li> <a href="https://github.com/brunagoncalves" target="_blank"">Ver meu portifólio</a></li>
+            <li> <a href=" https://app.rocketseat.com.br/explorer">Conheça o Explorer</a></li>
+        </ul>
 
         <div class="social-links">
-            <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://github.com/brunagoncalves" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://www.instagram.com/bruh_brubs" target="_blank"><ion-icon
+                    name="logo-instagram"></ion-icon></a>
+            <a href="https://www.youtube.com/@detetiveb" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/brunnagoncalves/" target="_blank"><ion-icon
+                    name="logo-linkedin"></ion-icon></a>
         </div>
 
         <footer>
-            <p>Feito com ♥ pela <a href="#">Rocketseat</a></p>
+            <p>Feito com ♥ pela <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a></p>
         </footer>
-
     </main>
 
     <!-- Ion Icons -->
