--- a/index.html
+++ b/index.html
@@ -10,38 +10,37 @@
 </head>
 
 <body>
-    <main class="content">
-        <div id="profile">
-            <img src="assets/avatar.png" alt="Foto de Bruna Gonçalves">
-            <p>@brunagoncalves</p>
+    <main class="container">
+        <div class="content-profile">
+            <div id="profile">
+                <img src="assets/avatar.png" alt="Foto de Bruna Gonçalves">
+                <p>Bruna Gonçalves</p>
+            </div>
+
+            <div class="switch" onclick="toggleMode()">
+                <button></button>
+                <span></span>
+            </div>
+
+
+            <ul id="links">
+                <li><a href="#">Visitar meu site</a></li>
+                <li><a href="https://github.com/brunagoncalves" target="_blank"">Ver meu portifólio</a></li>
+            <li><a href=" https://www.rocketseat.com.br">Conheça a Rocketseat</a></li>
+                <li><a href="https://rocketforms.typeform.com/to/fPcSmBp9#referral_id=908d1aa8-dd6f-4b35-be46-39ab192e74db"
+                        target="_blank">Inscrever-se no NLW</a></li>
+            </ul>
+
+            <div class="social-links">
+                <a href="https://github.com/brunagoncalves" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/brunnagoncalves/" target="_blank"><ion-icon
+                        name="logo-linkedin"></ion-icon></a>
+            </div>
+
+            <footer>
+                <p>Feito com ♥ <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a></p>
+            </footer>
         </div>
-
-        <div class="switch" onclick="toggleMode()">
-            <button></button>
-            <span></span>
-        </div>
-
-
-        <ul id="links">
-            <li> <a href="https://rocketforms.typeform.com/to/fPcSmBp9#referral_id=908d1aa8-dd6f-4b35-be46-39ab192e74db"
-                    target="_blank">Inscrever-se no NLW</a></li>
-            <li> <a href="#">Baixar meu E-Book</a></li>
-            <li> <a href="https://github.com/brunagoncalves" target="_blank"">Ver meu portifólio</a></li>
-            <li> <a href=" https://app.rocketseat.com.br/explorer">Conheça o Explorer</a></li>
-        </ul>
-
-        <div class="social-links">
-            <a href="https://github.com/brunagoncalves" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://www.instagram.com/bruh_brubs" target="_blank"><ion-icon
-                    name="logo-instagram"></ion-icon></a>
-            <a href="https://www.youtube.com/@detetiveb" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-            <a href="https://www.linkedin.com/in/brunnagoncalves/" target="_blank"><ion-icon
-                    name="logo-linkedin"></ion-icon></a>
-        </div>
-
-        <footer>
-            <p>Feito com ♥ pela <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a></p>
-        </footer>
     </main>
 
     <!-- Ion Icons -->
